# AI_Project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: README.md  data.json  pyproject.toml
backend/app/: data_store.py  main.py  utils.py
backend/app/api/routes/: __init__.py  course.py  lecturer.py  room.py  schedule.py  timeslot.py
backend/app/ga/: crossover.py  elitism.py  fitness.py  greedy_init.py  initializer.py  mutation.py  random_init.py  scheduler.py  selection.py  semi_greedy_init.py  session_utils.py  stopping.py  timeslots.py
backend/app/schemas/: __init__.py  chromosome.py  course.py  gene.py  lecturer.py  room.py  schedule_request.py  timeslot.py
backend/app/services/: scheduler_service.py
backend/notebooks/: ga_evaluation1.ipynb  ga_evaluation2.ipynb  ga_evaluation3.ipynb
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: axiosClient.ts  courseApi.ts  index.ts  lecturerApi.ts  roomApi.ts  scheduleApi.ts  timeslotApi.ts
frontend/src/components/: ConflictPanel.tsx  Dashboard.tsx  DataManager.tsx  GAControls.tsx  GAVisualizer.tsx  TimetableGrid.tsx
frontend/src/data/: sampleData.ts  store.tsx  types.ts
frontend/src/mock/: mockData.ts
src/components/: DataManager.tsx  GAControls.tsx  Layout.tsx  TimetableGrid.tsx
src/data/: sampleData.ts  store.tsx  types.ts
src/ga/: fitness.ts  geneticAlgorithm.ts  operators.ts
